Fixed some gradle dependencies for sonar