@@ -1,6 +1,8 @@
 plugins {
     id 'java'
     id 'eclipse'
+    id 'jacoco'
+    id 'application'
 }
 
 group 'aPaintUS'
@@ -36,9 +38,27 @@ dependencies {
     testCompile(group: "org.testfx", name: "testfx-junit", version: "4.0.13-alpha")
 }
 
+application {
+    mainClassName = 'apaintus.Main'
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.swing,java.xml.bind'
+        ]
+        classpath = files()
+    }
+}
+
 test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+    }
+    jacoco {
+        append = false
+        destinationFile = file("$buildDir/reports/jacoco-it.exec")
     }
 }
